0.9.1
   - bug [9780] "setup_postgres_check_fedora.py fejler pga manglende sql fil"
   - bug [8758] "ComparablePair.compareTo throws java.lang.ClassCastException when called with incompatible ComparablePair."
   - bug [9338] "Tabellerne i ES-basen skal låses i vise tilfælde når harvesteren forespørger i den"
   - bug [9512] "ESHarvester skal benytte ES-diagnostics"
   - bug [9639] "setStatus i harvester interfacet skal ændres til tre forskellige setStatusXXX-metoder"
   - bug [9761] "FedoraHandle skal være intern gemt under IObjectRepository."
   - bug [9762] "Delayed Allocation of Fedora ID."
   - bug [9763] "CargoContainer skal kunne holde et PID prefix/nameSpace"
   - bug [9777] "FedoraUtils:CargoContainerToFoxml Skal ikke finde på fedoraPid'er"
   - bug [9303] "Der er ikke brug for Estimeringsklassen mere."
   - bug [9511] "ESHarvester mangler unit test."
                Removed ESHarvestTest.java from unittest
   - bug [9643] "python setup_postgres_check_fedora.py bør vise hvilken port den undersøger fedora på"
   - bug [9767] "En conditional i FedoraUtils evaluerer altid til falsk"
   - bug [9768] "Mismatch i adminData ID i fedora"
   - bug [9753] "Konstruktion af RELS-EXT bliver meget besværligt, hvis ikke CargoContaineren har en identifier"
   - bug [9723] "OwnerRelation bør ligge før store i datadock_jobs.xml"
   - bug [9647] "Der skal laves en type for Fedora PID istedet for at indholde den i en streng."
   - bug [9701] "OwnerRelation.java generære ikke isMemberOfColection."
   - bug [9699] "Null Excaption in MarcxchangeWorkRelation_1.java"
   - bug [9676] "unødig while i PTIManager::void update()"
   - bug [9660] "DublinCore får tomme værdier sat fra korrekt InputStream"
   - bug [9659] "DCHarvester sætter forkert mimetype"
   - bug [9346] "Der skal laves et script der kan samle FileHarvester filer til en fil som den ville se ud fra posthuset"
   - bug [9427] "Vi skal have en HarvesterIOException"