@@ -16,6 +16,8 @@ GNU General Public License for more details.
 You should have received a copy of the GNU General Public License
 along with opensearch.  If not, see <http://www.gnu.org/licenses/>.
  */
+
+
 package dk.dbc.opensearch.plugins;
 
 import dk.dbc.opensearch.common.helpers.OpensearchNamespaceContext;
