@@ -1,4 +1,5 @@
 0.9.1
+   - bug [9629] "Create work:* objects in fedora."
    - bug [9780] "setup_postgres_check_fedora.py fejler pga manglende sql fil"
    - bug [8758] "ComparablePair.compareTo throws java.lang.ClassCastException when called with incompatible ComparablePair."
    - bug [9338] "Tabellerne i ES-basen skal låses i vise tilfælde når harvesteren forespørger i den"
